fix highlight textarea overlap incompatability issue

--- a/front-end/src/containers/Inspect/Inspect.module.css
+++ b/front-end/src/containers/Inspect/Inspect.module.css
@@ -12,3 +12,7 @@
     border: 1px solid;
     transition: height 0.3s ease;
 }
+
+.NotFoundMessage {
+    text-align: center;
+}
